2006-04-19  Tom Tromey  <tromey@redhat.com>

	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test): Added
	regression test for PR classpath/27189.

2006-04-12  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	*gnu/testlet/java/util/regex/Pattern/pcrematches.java(decode):
	New method. (test): Use the new method decode to input Unicode
	characters. Added some harness.debug logging.
	* gnu/testlet/java/util/regex/Pattern/testdata3: Added new tests.

2006-04-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/BitSet/clear.java: New file,
	* gnu/testlet/java/util/BitSet/flip.java: New file,
	* gnu/testlet/java/util/BitSet/get.java: New file,
	* gnu/testlet/java/util/BitSet/Get.java: Merged with get.java.

2006-04-12  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/java/util/Collections/unmodifiableMap.java: New test.

2006-04-06  Michael Barker  <mike@middlesoft.co.uk>

	* gnu/testlet/java/nio/channels/FileChannel/offsetSingleBugger.java: 
	New test
	* gnu/testlet/java/nio/channels/FileChannel/offsetSingleDirectBuffer.java: 
	New test
	
2006-04-06  Michael Barker  <mike@middlesoft.co.uk>

	* gnu/testlet/java/nio/channels/FileChannel/multibufferIO.java: Added
	* gnu/testlet/java/nio/channels/FileChannel/multidirectbufferIO.java: Added
	* gnu/testlet/java/nio/channels/FileChannel/singlebufferIO.java: Added
	* gnu/testlet/java/nio/channels/SocketChannel/select.java Added flip() to
	reset buffer.
	
	
2006-04-08  Raif S. Naffah  <raif@swiftdsl.com.au>

	* gnu/testlet/gnu/java/security/hash/TestOfWhirlpool.java:
	Updated documentation.
	(TV1): Use Version 3 test vector.
	(TV2): Use Version 3 test vector.
	(test): Use ISO test vectors.

2006-04-06  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/security.java: Add check for no
	permissions when calling getClassLoader() on bootstrap class.

2006-04-05  Anthony Balkissoon  <abalkiss@redhat.com>

	* README: Added line about compiling the Harness, RunnerProcess, and