@@ -1,3 +1,8 @@
+2006-04-23  Olivier Jolly  <olivier.jolly@pcedev.com>
+
+	* gnu/testlet/java/util/Collections/unmodifiableMap.java(testMap):
+	Added regression test on UnmodifiableMap.entrySet().toArray(Object[]).
+
 2006-04-19  Tom Tromey  <tromey@redhat.com>
 
 	* gnu/testlet/java/text/SimpleDateFormat/regress.java (test): Added
